--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,8 +26,8 @@ body{
     position: relative;
     font-size: 25px;
     color: white;
-    text-transform: uppercase;
-    font-weight: 700;
+    text-decoration: none;
+    font-weight: 600;
 
 
 }
